@@ -11,6 +11,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Properly handle modifier key releases for keyboard canvas shortcuts. Thanks Daystream for reporting.
  * Server Feature: Implement a centralized bans system, so that moderators don't have to manage it on all community servers separately, which increases the chances of getting a ban wrong. Thanks Bluestrings for suggesting.
  * Server Feature: Allow exempting users from ban ranges, to help alleviate false positives.
+ * Fix: Make IPv6 addresses work in invite links.
 
 2023-09-30 Version 2.2.0-beta.8
  * Fix: Apply color wheel direction to color dialogs too. Thanks Blozzom for reporting.
